* Fixed mobile layout issues with details element in matriculation views

--- a/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/application-sub-panel.scss
+++ b/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/application-sub-panel.scss
@@ -344,16 +344,6 @@
   }
 }
 
-.application-sub-panel__body--studies-yo-subjects {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-
-  @include breakpoint($breakpoint-pad) {
-    flex-direction: row;
-  }
-}
-
 .application-sub-panel__body--guidance-relation {
   display: flex;
   flex-flow: wrap;
@@ -381,14 +371,6 @@
     &:last-child {
       margin: 0;
     }
-  }
-}
-
-.application-sub-panel__notification-body--studies-yo-subjects {
-  padding: 10px;
-
-  @include breakpoint($breakpoint-pad) {
-    padding: 10px 0;
   }
 }
 
